# rustednes-cosmic

./: Cargo.toml  README.md  justfile
i18n/en/: rustednes_cosmic.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  audio.rs  config.rs  emulator.rs  main.rs  video.rs
