[package]
name = "rustednes-cosmic"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A RustedNES frontend using libcosmic"
repository = "https://github.com/jasonrhansen/rustednes-cosmic"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
rustednes-core = { git = "https://github.com/jasonrhansen/RustedNES" }
rustednes-common = { git = "https://github.com/jasonrhansen/RustedNES" }
cpal = "0.16.0"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
zip = "4.0"
tracing = "0.1"
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
